# research30days-cn

./: .gitignore  LICENSE  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-TW.md  pyproject.toml  requirements.txt
skills/research30days-cn/: SKILL.md
skills/research30days-cn/references/: output-template.md
skills/research30days-cn/scripts/: research30days_cn.py
skills/research30days-cn/scripts/lib/: render.py  schema.py  sources.py
tests/: test_render.py
